[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sungrow_http_config"
version = "0.1.1"
dependencies = ["tenacity", "urllib3", "pymodbus<2.6", "SungrowModbusTcpClient>=0.1.5"]
authors = [{ name = "Ross Williamson", email = "ross@inertia.net.nz" }]
description = "A package to manipulate settings on Sungrow Inverters"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0,<1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/ross-w/sungrow_exportlimit"
"Bug Tracker" = "https://github.com/ross-w/sungrow_exportlimit/issues"

[tool.ruff]
line-length = 120  # More lenient than default 88
target-version = "py37"

[tool.ruff.lint]
# Start with just the basics
select = [
    "E9",   # Syntax errors
    "F",    # Pyflakes (unused imports, undefined names, etc.)
    "W6",   # Whitespace warnings
    "I001", # Import sorting (just unsorted imports, not grouping)
]

# Ignore some common issues for now
ignore = [
    "E501",  # Line too long
    "E203",  # Whitespace before ':'
]

[tool.ruff.lint.isort]
known-first-party = ["sungrow_http_config"]
force-single-line = false  # Allow multiple imports per line for now
